{
    "name": "GameInputs",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "fcdd5d51-e886-4a8b-9971-cc9371dcbb7d",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "a59cc92c-5e5b-4f1f-8b3c-3214064e4eb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateShip",
                    "type": "Button",
                    "id": "3e0a8ab4-7c05-4faa-aa9c-1e9e2ada9fad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "4c8879a8-aafd-4834-b927-463eb5963ef0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GenerateEnemyShip",
                    "type": "Button",
                    "id": "d2dfef67-70e3-431a-bc64-08e53897e7e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TogglePlayerShipVisibility",
                    "type": "Value",
                    "id": "4b8b0aa6-6d9f-4dbe-9abc-cd16698c289e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a15fc00-5c35-4417-ac99-c139461fb29e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90309cb8-7c1c-48e7-acdf-415ccf457d97",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fd620d6-d6ba-47f3-b1c6-91c4d3293b56",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cea7d9b-dab9-4556-8572-10574d83bb61",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenerateEnemyShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07e430d8-26ef-466a-b7d5-e6490abfad76",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePlayerShipVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}